# bazel-sample

./: .gitignore  MODULE.bazel  bazel-bazel-sample  rules_jvm_external++maven+maven_install.json
src/test/org/example/: BUILD.bazel  TestMain.kt
